Replace deprecated new URL constructors in webservice ejb_annotations and remaining clients
Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>